# SkeletonKey

./: CMakeLists.txt  README.md  fight.c  parse.py
examples/: deadlock.c
lock-visualizer/: a.out  deadlock.c  locks.c  requirements.txt
lock-visualizer/server/: server.py  trace_reader.py
lock-visualizer/static/: index.html
lock-visualizer/static/components/: App.jsx  LockTimeline.jsx  MultiLockTimeline.jsx
src/: reader.cpp  skeletonkey.cpp
tests/: test_smoke.py
